# nfft

./: Makefile.am  Makefile.in  VERSION  aclocal.m4  configure  configure.ac
applications/: Makefile.in  doxygen.c
applications/fastgauss/: Makefile.am  Makefile.in  fastgauss.c  levelplots.m  show_results.m
applications/fastsum/: Makefile.am  Makefile.in  fastsum.c  fastsum.h  fastsum.m  fastsum_matlab.c  fastsum_test.c  fastsum_test.m  kernels.c  kernels.h
applications/fastsumS2/: Makefile.am  Makefile.in  fastsumS2.c  fastsumS2.m  readTestcase.m  writeTestcase.m
applications/iterS2/: Makefile.am  Makefile.in  iterS2.c  writeImageTestcase.m  writeTestcase.m
applications/mri/: Makefile.in  doxygen.c
applications/polarFFT/: Makefile.am  Makefile.in  fft_test.m  linogram_fft_test.c  (+2 more)
doxygen/: Makefile.in  doxygen.Doxyfile
examples/: Makefile.in  doxygen.c
examples/nnfft/: Makefile.am  Makefile.in  accuracy.c  accuracy.m  simple_test.c
examples/nnfft/accuracy/: Makefile.in
examples/nnfft/simple_test/: Makefile.in
examples/solver/: Makefile.am  Makefile.in  glacier.c  glacier.m  glacier_cv.m  simple_test.c
include/: Makefile.in  config.h.in  infft.h  nfft3.h  nfft3conf.h  nfft3util.h  util.h
kernel/: Makefile.in
m4/: ax_prog_matlab.m4
matlab/: Makefile.am  Makefile.in  args.c  imex.h  malloc.c
matlab/nfft/: Makefile.am  Makefile.in  nfftmex.c
matlab/nfsft/: Makefile.am  Makefile.in  nfsftmex.c  nfsftmex.m
matlab/nfsft/@f_hat/: Makefile.in
support/: Makefile.in
tests/: Makefile.in
util/: Makefile.am  Makefile.in  malloc.c  util.c
(+783 files in other folders)
